# gpu_hull

./: CMakeLists.txt  README.md
include/gpu_hull/: gpu_vector.cuh
src/: test.cu
